--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,6 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Install dependencies playwright
-        run: npx playwright install-deps
+        run: npx playwright install && npx playwright install-deps
       - name: test storybook
         run: npx run test:storybook
