--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,13 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Install dependencies playwright
-        run: npx playwright install && npx playwright install-deps
+        run: npx playwright install-deps
+      - name: Build Storybook
+        run: npm run  build-storybook --quiet
+      - name: Serve Storybook and run tests
+        run: |
+          npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
+            "npx http-server storybook-static --port 6006 --silent" \
+            "npx wait-on tcp:6006 && npm run test-storybook"
       - name: test storybook
         run: npx run test:storybook
