--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "test:storybook": "test-storybook"
   },
   "dependencies": {
+    "concurrently": "^8.2.1",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "run": "^1.4.0"
+    "run": "^1.4.0",
+    "wait-on": "^7.0.1"
   },
   "devDependencies": {
     "@storybook/addon-a11y": "^7.4.6",
