--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "concurrently": "^8.2.1",
+    "http-server": "^14.1.1",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
