--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,13 +16,13 @@ jobs:
         with:
           node-version: "18"
       - name: Install dependencies
-        run: npm ci
-      - name: Install dependencies playwright
-        run: npx playwright install-deps
+        run: yarn
+      - name: Install Playwright
+        run: npx playwright install --with-deps
       - name: Build Storybook
-        run: npm run  build-storybook --quiet
+        run: yarn build-storybook --quiet
       - name: Serve Storybook and run tests
-        run: >
-          npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue"
-            "npx http-server storybook-static --port 6006 --silent" 
-            "npx wait-on tcp:6006 && npm run test:storybook"
+        run: |
+          npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
+            "npx http-server storybook-static --port 6006 --silent" \
+            "npx wait-on tcp:6006 && yarn test-storybook"
